NEWc commit 7/1